<resources>
    <string name="app_name">Projects</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcom">welcome to projects</string>
    <string name="sign_up"> sign up</string>
    <string name="email">E-mail </string>
    <string name="submit">sign in</string>
    <string name="password">password </string>
    <string name="projects">projects</string>
    <string name="proj">projects available :</string>
    <string name="done">booked the projects successfully</string>
    <string name="home">back to home</string>
    <string name="hi">welcome in projects app</string>
    <string name="num">number of your projects</string>
    <string name="det"> projects details</string>
    <string name="detiles">details :</string>
    <string name="nots">notes :</string>
    <string name="edit">edit</string>
    <string name="delet">delete</string>
    <string name="sign_out">sign out</string>
    <string name="well">welcome in projects app</string>
    <string name="select">select a supervisor :</string>
    <string name="yes">accept</string>
    <string name="no">deny</string>
    <string name="detp">projects details</string>
    <string name="title">title :</string>
    <string name="note">notes :</string>
    <string name="book">booked  projects </string>
    <string name="dett">details :</string>
    <string name="update">update</string>
    <string name="n">projects title</string>
    <string name="notes">notes</string>
    <string name="add">add project</string>
    <string name="nonot">no notification</string>
    <string name="addo">add new project</string>
    <string name="nn">notes</string>
    <string name="d">details</string>
    <string name="ti">project title</string>
    <string name="gg">projects available</string>
    <string name="myA">my account</string>
    <string name="notification">notifications</string>
    <string name="wait">please wait  ....</string>
</resources>