<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddFragment"
    android:background="@color/my_color1"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:paddingBottom="80dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/v"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_undraw_online_ad_re_ol62"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/droid_arabic"
                android:text="@string/addo"
                android:textColor="@color/my_color4"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/x"
                android:hint="@string/ti"
                android:textColorHint="#ddd"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                android:layout_margin="16dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v"

                app:startIconDrawable="@drawable/ic_edit"
                app:startIconTint="#ddd">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextProjectTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_sign"
                    android:fontFamily="@font/droid_arabic"
                    android:textColor="@color/white"

                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/x"
                        android:id="@+id/c"
                        android:layout_margin="16dp"

                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/d"
                        android:textColorHint="#ddd"
                        app:boxBackgroundMode="filled"
                        app:boxBackgroundColor="@color/my_color4"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:startIconDrawable="@drawable/ic_articlel"
                        app:startIconTint="#ddd"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextProjectDetails"
                            android:layout_width="match_parent"
                            android:background="@drawable/shape_sign"

                            android:layout_height="wrap_content"
                            android:fontFamily="@font/droid_arabic"
                            android:textColor="@color/white"
                            android:inputType="textMultiLine"
                            android:textSize="14sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/nn"
                        android:layout_margin="16dp"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/c"
                        android:textColorHint="#ddd"
                        app:boxBackgroundMode="filled"
                        app:boxBackgroundColor="@color/my_color4"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:startIconDrawable="@drawable/ic_assignment"
                        app:startIconTint="#ddd"
                        android:id="@+id/b"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextProjectNotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/droid_arabic"
                            android:background="@drawable/shape_sign"

                            android:textColor="@color/white"
                            android:inputType="textMultiLine"
                            android:textSize="14sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/addNewProjectBtn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/txt_shape"
                        android:fontFamily="@font/droid_arabic"
                        android:text="@string/add"
                        android:layout_margin="16dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/my_color4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/b"
                        android:textSize="16sp" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>