<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EditProjectFragment"
    android:background="@color/my_color1"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:paddingBottom="80dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/v"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_undraw_online_ad_re_ol62"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/droid_arabic"
                android:text="تعديل المشروع"
                android:textColor="@color/my_color4"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/my_color1"
                android:textDirection="rtl"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/my_color1"
                    android:padding="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/n"
                        android:textColorHint="#000"
                        app:boxBackgroundMode="filled"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:startIconDrawable="@drawable/ic_edit"
                        app:startIconTint="#000000"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextProjectTitle"
                            android:layout_width="match_parent"
                            android:background="@drawable/txt_shape"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/droid_arabic"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_marginBottom="10dp"
                        android:hint="التفاصيل"
                        android:textColorHint="#000"
                        app:boxBackgroundMode="filled"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:startIconDrawable="@drawable/ic_articlel"
                        app:startIconTint="#000"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextProjectDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/droid_arabic"
                            android:background="@drawable/txt_shape"
                            android:textColor="@color/black"
                            android:inputType="textMultiLine"
                            android:textSize="14sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/notes"
                        android:textColorHint="#000"
                        app:boxBackgroundMode="filled"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:startIconDrawable="@drawable/ic_assignment"
                        app:startIconTint="#000"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextProjectNotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/txt_shape"
                            android:fontFamily="@font/droid_arabic"
                            android:textColor="@color/black"
                            android:inputType="textMultiLine"
                            android:textSize="14sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/updateProjectBtn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
android:background="@drawable/shape_sign"                        android:fontFamily="@font/droid_arabic"
                        android:text="@string/update"
                        android:textColor="@color/my_color1"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>